--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <div class="container">
             <h1>徐艳群</h1>
-            <p>助理研究员/副研究员 | 浙大宁波理工学院</p>
-            <p>Email: <a href="mailto:xuyanqun@zju.edu.cn">xuyanqun@zju.edu.cn</a></p>
+            <p>副研究员 | 浙大宁波理工学院/浙江大学（双聘）</p>
+            <p>Email: xuyanqun@zju.edu.cn <a href="mailto:xuyanqun@zju.edu.cn">xuyanqun@zju.edu.cn</a></p>
         </div>
     </header>
 
     <section id="about">
-        <h2>关于我</h2>
-        <p>我专注于食品供应品质与营养的研究，特别是在果蔬供应链保质增效与营养提升调控技术方面。我在植物天然挥发性物质保鲜技术领域有丰富的研究成果，发表了60余篇一区论文，并获授权发明专利24件。</p>
+        <h2>研究领域</h2>
+        <p>一直从事果蔬供应链保质增效和营养提升调控技术研究，从营养健康功效阐释、品质调控机理解析、微生物防控靶点挖掘、长效控释技术研创等方面突破了植物天然挥发性物质综合保鲜关键技术瓶颈。入选了国家高层次人才特殊支持计划青年拔尖人才、第八届中国科协青年人才托举工程、浙江省万人计划“青年拔尖人才”和浙江省杰出青年科学基金；作为主要完成人获国家级教学成果二等奖（8/15）、浙江省科学技术进步二等奖（1/9）、浙江省自然科学一等奖（3/5）、浙江省科学技术进步一等奖（4/13）和中国商业联合会科学技术特等奖（1/12）。主持国家自然科学基金、国家重点研发计划任务等科研项目10余项，在New Phytologist，Plant Cell & Environment等行业高水平期刊发表1区论文60余篇，获授权发明专利24件，参与制定行业标准2项，担任中国农学会农产品物流分会秘书长等学术兼职。</p>
     </section>
 
     <section id="education">
@@ -27,7 +27,7 @@
             <li><strong>2010.09-2014.06</strong> 工学学士, 浙江大学</li>
             <li><strong>2014.09-2019.06</strong> 工学博士, 浙江大学</li>
             <li><strong>2015.09-2017.09</strong> 联培博士, 加拿大农业部</li>
-            <li><strong>2019.12-至今</strong> 浙大宁波理工学院 助理研究员/副研究员</li>
+            <li><strong>2019.12-至今</strong> 助理研究员/副研究员, 浙大宁波理工学院/浙江大学</li>
             <li><strong>2021.04-2024.01</strong> 在职博士后, 中国农业科学院</li>
             <li><strong>2022.11-2023.10</strong> 访问研究员, Harvard University</li>
         </ul>
@@ -38,6 +38,9 @@
         <ul>
             <li>国家“十四五”重点研发计划任务 (2022YFD2100104)</li>
             <li>国家自然科学基金面上项目 (3227180091)</li>
+            <li>国家自然科学基金年基金项目（32001748）</li>
+            <li>浙江省杰出青年自然科学基金（R24C200029）</li>
+            <li>国家“十四五”重点研发计划任务 (2022YFD2100104)</li>
         </ul>
     </section>
 
@@ -54,9 +57,11 @@
     <section id="publications">
         <h2>代表性论文</h2>
         <ul>
-            <li>(E)-2-hexenal facilitates Botrytis cinerea infection of fruits, New Phytologist, 2021 (IF=10.5)</li>
-            <li>UV-C priming of strawberry leaves against infection, Plant Cell and Environment, 2019 (IF=8.1)</li>
-            <li>Rethinking botanical VOCs in food preservation, Trends in Food Science & Technology, 2022 (IF=16.6)</li>
+            <li>Plant volatile organic compound (E)-2-hexenal facilitates Botrytis cinerea infection of fruits by inducing sulfate assimilation, New Phytologist, 2021, 231(1): 432-446 (IF=10.5)</li>
+            <li>Ultraviolet-C priming of strawberry leaves against subsequent Mycosphaerella fragariae infection involves the action of reactive oxygen species, plant hormones, and terpenes，Plant Cell and Environment, 2019, 42(3): 815-831，ESI高被引论文</li>
+            <li>Rethinking of botanical volatile organic compounds applied in food preservation: Challenges in acquisition, application, microbial inhibition and stimulation, Trends in Food Science & Technology, 2022, 131:61-76</li>
+            <li>Preharvest UV-C treatment affected postharvest senescence and phytochemicals alternation of strawberry fruit with the possible involvement of abscisic acid regulation, Food Chemistry, 2019, 299: 125138</li>
+            <li>Deterioration of plant volatile organic compounds in food: Consequence, mechanism, detection, and control, Trends in Food Science & Technology, 2022, 131: 61-76</li>
         </ul>
     </section>
 
