--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <div class="container">
             <h1>徐艳群</h1>
-            <p>副研究员 | 浙大宁波理工学院/浙江大学（双聘）</p>
-            <p>Email: xuyanqun@zju.edu.cn <a href="mailto:xuyanqun@zju.edu.cn">xuyanqun@zju.edu.cn</a></p>
+            <p>女, 副研究员 | 浙大宁波理工学院/浙江大学（双聘）</p>
+            <p>出生年月：1991-03 Email: xuyanqun@zju.edu.cn </p>
         </div>
     </header>
 
@@ -57,11 +57,11 @@
     <section id="publications">
         <h2>代表性论文</h2>
         <ul>
-            <li>Plant volatile organic compound (E)-2-hexenal facilitates Botrytis cinerea infection of fruits by inducing sulfate assimilation, New Phytologist, 2021, 231(1): 432-446 (IF=10.5)</li>
-            <li>Ultraviolet-C priming of strawberry leaves against subsequent Mycosphaerella fragariae infection involves the action of reactive oxygen species, plant hormones, and terpenes，Plant Cell and Environment, 2019, 42(3): 815-831，ESI高被引论文</li>
-            <li>Rethinking of botanical volatile organic compounds applied in food preservation: Challenges in acquisition, application, microbial inhibition and stimulation, Trends in Food Science & Technology, 2022, 131:61-76</li>
-            <li>Preharvest UV-C treatment affected postharvest senescence and phytochemicals alternation of strawberry fruit with the possible involvement of abscisic acid regulation, Food Chemistry, 2019, 299: 125138</li>
-            <li>Deterioration of plant volatile organic compounds in food: Consequence, mechanism, detection, and control, Trends in Food Science & Technology, 2022, 131: 61-76</li>
+            <li>1. Plant volatile organic compound (E)-2-hexenal facilitates Botrytis cinerea infection of fruits by inducing sulfate assimilation, New Phytologist, 2021, 231(1): 432-446 (IF=10.5)</li>
+            <li>2. Ultraviolet-C priming of strawberry leaves against subsequent Mycosphaerella fragariae infection involves the action of reactive oxygen species, plant hormones, and terpenes，Plant Cell and Environment, 2019, 42(3): 815-831，ESI高被引论文</li>
+            <li>3. Rethinking of botanical volatile organic compounds applied in food preservation: Challenges in acquisition, application, microbial inhibition and stimulation, Trends in Food Science & Technology, 2022, 131:61-76</li>
+            <li>4. Preharvest UV-C treatment affected postharvest senescence and phytochemicals alternation of strawberry fruit with the possible involvement of abscisic acid regulation, Food Chemistry, 2019, 299: 125138</li>
+            <li>5. Deterioration of plant volatile organic compounds in food: Consequence, mechanism, detection, and control, Trends in Food Science & Technology, 2022, 131: 61-76</li>
         </ul>
     </section>
 
