--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <div class="container">
             <h1>徐艳群</h1>
-            <p>女, 副研究员 | 浙大宁波理工学院/浙江大学（双聘）</p>
-            <p>出生年月：1991-03 Email: xuyanqun@zju.edu.cn </p>
+            <p>副研究员 | 浙大宁波理工学院/浙江大学（双聘）</p>
+            <p>女,出生年月：1991-03 Email: xuyanqun@zju.edu.cn </p>
         </div>
     </header>
 
