--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1>徐艳群</h1>
             <p>副研究员 | 浙大宁波理工学院/浙江大学（双聘）</p>
-            <p>女,出生年月：1991-03 Email: xuyanqun@zju.edu.cn </p>
+            <p>女, 1991-03 Email: xuyanqun@zju.edu.cn </p>
         </div>
     </header>
 
